@@ -2,6 +2,7 @@
 	- Increase size of star, cross and triangle markers by 20%
 	to match other markers better
 	- Increase pentagon too
+	- Start work to tie settings together
 	
 * 2005-08-30 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Time out splash logo
